# Cyn

./: .gitignore  .replit  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  VERCEL_DEPLOYMENT.md  build-for-vercel.sh  cyn-training-data.json  cyn-voice-training-data.json  glitch.json  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  replit.nix  vercel.json
.github/workflows/: ci.yml
api/: index.js
client/src/components/chat/: tts-button.tsx
client/src/lib/: fakeyou-client.ts
server/: audio-converter.ts  fakeyouClient.ts  index.ts  routes.ts  server-vercel.js  vercel-utils.ts  vercel.js  voice-sample-splitter.ts
server/marytts/: voice-trainer.ts
server/marytts/config/: voice-config.ts
server/marytts/scripts/: synthesize.py
training-data/voice-samples/: README.md
voice-training/: README.md
voice-training/voices/default-voice/: config.json
